test: cover authorization and service workflows